--- a/src/servers/web/client/src/app/components/navbar/navbar.component.html
+++ b/src/servers/web/client/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
       <button mat-menu-item [routerLink]="['/', 'dashboard']">
         <mat-icon>dashboard</mat-icon> Dashboard
       </button>
-      <button mat-menu-item *ngIf="isAdmin">
+      <button mat-menu-item *ngIf="isAdmin" [routerLink]="['/', 'admin']">
         <mat-icon>settings</mat-icon> Admin
       </button>
       <button mat-menu-item (click)="logOut()">
