--- a/src/servers/web/client/src/app/components/taskset-details/taskset-details.component.html
+++ b/src/servers/web/client/src/app/components/taskset-details/taskset-details.component.html
@@ -1,5 +1,5 @@
 <ngx-loading [show]="loading"></ngx-loading>
-<div class="content-wrapper">
+<div class="content-wrapper" [hidden]="route.firstChild">
   <div class="container-fluid">
     <div class="row" *ngIf="taskset">
       <div class="col">
@@ -37,14 +37,20 @@
             </mat-list>
 
             <div class="row">
-              <button mat-raised-button (click)="delete()" class="btn-danger mt-2">Delete</button>
-              <button mat-raised-button (click)="cancel()" class="btn-danger ml-2 mt-2">Cancel</button>
+              <button mat-raised-button (click)="graphs()" color="primary" class="ml-2 mt-2">Graphs</button>
+              <!-- <button mat-raised-button (click)="export()" color="primary" class="ml-2 mt-2">Export</button> -->
             </div>
 
             <div class="row">
-              <button mat-raised-button (click)="clone()" color="primary" class="mt-2">Clone</button>
+              <button mat-raised-button (click)="clone()" color="primary" class="ml-2 mt-2">Clone</button>
               <button mat-raised-button (click)="export()" color="primary" class="ml-2 mt-2">Export</button>
             </div>
+
+            <div class="row">
+              <button mat-raised-button (click)="delete()" class="btn-danger ml-2 mt-2">Delete</button>
+              <button mat-raised-button (click)="cancel()" class="btn-danger ml-2 mt-2">Cancel</button>
+            </div>
+
           </mat-card-content>
         </mat-card>
       </div>
@@ -57,3 +63,5 @@
     </div>
   </div>
 </div>
+
+<router-outlet></router-outlet>
