Add Admin Mode, improve permissions on all endpoints, move Logs to admin area
Signed-off-by: Mikael Mello <git@mikaelmello.com>

--- a/src/servers/web/client/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/servers/web/client/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -7,6 +7,10 @@
     <button mat-menu-item class="sidenav-button" (click)="settings()">
       <mat-icon>settings_applications</mat-icon> Settings
     </button>
+
+    <button mat-menu-item class="sidenav-button" (click)="logs()">
+      <mat-icon>description</mat-icon> Logs
+    </button>
   </mat-sidenav>
 
   <mat-sidenav-content class="pb-4">
