--- a/src/servers/web/client/src/app/components/settings/settings.component.html
+++ b/src/servers/web/client/src/app/components/settings/settings.component.html
@@ -43,7 +43,7 @@
         </mat-form-field>
       </div>
 
-      <button mat-raised-button color="accent" type="submit" class="mt-2">Submit</button>
+      <button mat-raised-button color="primary" type="submit" class="mt-2">Save</button>
       <mat-error class="mt-1 mb-1">{{errorMessage}}</mat-error>
     </form>
   </div>
