--- a/src/servers/web/client/src/app/components/task-list/task-list.component.html
+++ b/src/servers/web/client/src/app/components/task-list/task-list.component.html
@@ -6,20 +6,20 @@
 
   <ng-container matColumnDef="precedence">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Precedence</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{row.precedence}}</mat-cell>
+    <mat-cell *matCellDef="let task">{{task.precedence}}</mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="commandLine">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Command</mat-header-cell>
-    <mat-cell *matCellDef="let row">
-      <span>{{row.commandLine}}</span>
+    <mat-cell *matCellDef="let task">
+      <span>{{task.commandLine}}</span>
     </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="startTime">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Start</mat-header-cell>
-    <mat-cell *matCellDef="let row">
-      <span *ngIf="row.startTime; else notFinished">{{row.startTime | date:'short'}}</span>
+    <mat-cell *matCellDef="let task">
+      <span *ngIf="task.startTime; else notFinished">{{task.startTime | date:'short'}}</span>
       <ng-template #notFinished>
         N/A
       </ng-template>
@@ -28,8 +28,8 @@
 
   <ng-container matColumnDef="endTime">
     <mat-header-cell *matHeaderCellDef mat-sort-header>End</mat-header-cell>
-    <mat-cell *matCellDef="let row">
-      <span *ngIf="row.endTime; else notFinished">{{row.endTime | date:'short'}}</span>
+    <mat-cell *matCellDef="let task">
+      <span *ngIf="task.endTime; else notFinished">{{task.endTime | date:'short'}}</span>
       <ng-template #notFinished>
         N/A
       </ng-template>
@@ -38,18 +38,30 @@
 
   <ng-container matColumnDef="errorCount">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Errors</mat-header-cell>
-    <mat-cell *matCellDef="let row">
-      <span>{{row.errorCount}}</span>
+    <mat-cell *matCellDef="let task">
+      <span>{{task.errorCount}}</span>
     </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="state">
     <mat-header-cell *matHeaderCellDef mat-sort-header>State</mat-header-cell>
-    <mat-cell *matCellDef="let row">
-      <span>{{row.state | statePipe}}</span>
+    <mat-cell *matCellDef="let task">
+      <span>{{task.state | statePipe}}</span>
+    </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Actions</mat-header-cell>
+    <mat-cell *matCellDef="let task">
+      <span *ngIf="task.state == PendingState">
+        <button mat-raised-button (click)="cancel(task)" class="btn-danger">Cancel</button>
+      </span>
+      <span *ngIf="task.state == FinishedState">
+        <button mat-raised-button (click)="discard(task)" class="btn-danger">Discard</button>
+      </span>
     </mat-cell>
   </ng-container>
 
   <mat-header-row *matHeaderRowDef="columnsToDisplay$"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: columnsToDisplay$; "></mat-row>
+  <mat-row *matRowDef="let task; columns: columnsToDisplay$; "></mat-row>
 </lac-table>
