--- a/src/servers/web/client/src/app/components/taskset-details/taskset-details.component.html
+++ b/src/servers/web/client/src/app/components/taskset-details/taskset-details.component.html
@@ -1,11 +1,11 @@
 <ngx-loading [show]="loading"></ngx-loading>
 <div class="content-wrapper" [hidden]="route.firstChild">
   <div class="container-fluid">
-    <div class="row" *ngIf="taskset">
+    <div class="row">
       <div class="col">
-        <app-task-list [tasksetId]="taskset._id"></app-task-list>
+        <app-task-list [tasksetId]="tasksetId"></app-task-list>
       </div>
-      <div class="col-3">
+      <div class="col-3" *ngIf="taskset">
         <mat-card class="form-card mt-4">
           <mat-card-header>
             <mat-card-title>{{taskset.name}}</mat-card-title>
@@ -49,6 +49,7 @@
             <div class="row">
               <button mat-raised-button (click)="delete()" class="btn-danger ml-2 mt-2">Delete</button>
               <button mat-raised-button (click)="cancel()" class="btn-danger ml-2 mt-2">Cancel</button>
+              <button mat-raised-button (click)="restart()" class="btn-danger ml-2 mt-2">Restart</button>
             </div>
 
           </mat-card-content>
