--- a/src/servers/web/client/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/servers/web/client/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -4,6 +4,9 @@
     <button mat-menu-item class="sidenav-button" (click)="users()">
       <mat-icon>people</mat-icon> Users
     </button>
+    <button mat-menu-item class="sidenav-button" (click)="workers()">
+      <mat-icon>computer</mat-icon> Workers
+    </button>
     <button mat-menu-item class="sidenav-button" (click)="settings()">
       <mat-icon>settings_applications</mat-icon> Settings
     </button>
