--- a/src/servers/web/client/src/app/components/worker-list/worker-list.component.html
+++ b/src/servers/web/client/src/app/components/worker-list/worker-list.component.html
@@ -10,7 +10,9 @@
 
   <ng-container matColumnDef="name">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{row.name}}</mat-cell>
+    <mat-cell *matCellDef="let row">{{row.name}} <a [routerLink]="[row._id]">
+        <mat-icon>edit</mat-icon>
+      </a></mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="status">
