Add custom limits for workers, improve UI on Workers main panel

--- a/src/servers/web/client/src/app/components/worker-card/worker-card.component.html
+++ b/src/servers/web/client/src/app/components/worker-card/worker-card.component.html
@@ -1,7 +1,8 @@
 <mat-card class="worker-card">
   <mat-card-content>
     <h3>{{name}}</h3>
-
+    <p>{{runningTasks}}</p>
+    <mat-divider class="mb-1"></mat-divider>
 
     <section>
       CPU Usage
