Fix URL of proxy and update search label of lac table

--- a/src/servers/web/client/src/app/components/user-files-list/user-files-list.component.html
+++ b/src/servers/web/client/src/app/components/user-files-list/user-files-list.component.html
@@ -1,4 +1,4 @@
-<lac-table [dataSource]="dataSource" matSort matSortActive="uploadTime" matSortDirection="desc" showRefresh
+<lac-table [dataSource]="dataSource" [searchLabel]="'Search'" matSort matSortActive="uploadTime" matSortDirection="desc" showRefresh
   initialPageSize="10">
   <h2 lac-table-title>
     {{customTitle}}
