--- a/src/servers/web/client/src/app/components/dialog-confirm/dialog-confirm.component.html
+++ b/src/servers/web/client/src/app/components/dialog-confirm/dialog-confirm.component.html
@@ -6,5 +6,5 @@
 </div>
 <div mat-dialog-actions class="mt-1">
   <button mat-raised-button [mat-dialog-close]="true" class="danger">Yes</button>
-  <button mat-raised-button [mat-dialog-close]="fale" color="primary">Cancel</button>
+  <button mat-raised-button [mat-dialog-close]="false" color="primary">Cancel</button>
 </div>
