--- a/src/servers/web/client/src/app/components/taskset-edit/taskset-edit.component.html
+++ b/src/servers/web/client/src/app/components/taskset-edit/taskset-edit.component.html
@@ -67,7 +67,7 @@
         </div>
       </div>
 
-      <div formArrayName="inputs" *ngFor="let input of form.get('inputs').controls; let i=index">
+      <div formArrayName="inputs" *ngFor="let input of form.get('inputs')['controls']; let i=index">
         <div [formGroupName]="i" class="row">
           <div class="col">
             <div class="row">
